fix(faq aligmnet in services detail page): alignment issue fix

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -432,7 +432,7 @@ global styles
 }
 
 .page .cover .page-top .breadcrumb li a.active {
-  color: #f5a623;
+  /* color: #f5a623; */
 }
 
 .page .page-bottom {
